js/src/tests/test262/built-ins/Promise/reject/S25.4.4.4_A2.1_T1.js
var
p
=
Promise
.
reject
(
3
)
;
assert
(
!
!
(
p
instanceof
Promise
)
'
The
value
of
!
!
(
p
instanceof
Promise
)
is
expected
to
be
true
'
)
;
p
.
then
(
function
(
)
{
throw
new
Test262Error
(
"
Promise
should
not
be
fulfilled
.
"
)
;
}
function
(
result
)
{
assert
.
sameValue
(
result
3
'
The
value
of
result
is
expected
to
be
3
'
)
;
}
)
.
then
(
DONE
DONE
)
;
